o slurm-arch.eps moved into figures/

--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -187,7 +187,7 @@ The job in Partition 2 has only one job step using half of the original
 job allocation.
 
 \begin{figure}[tb]
-\centerline{\epsfig{file=slurm-arch.eps,scale=0.5}}
+\centerline{\epsfig{file=figures/slurm-arch.eps,scale=0.5}}
 \caption{SLURM Architecture - Subsystems}
 \label{archdetail}
 \end{figure}
